// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default plugin GET /probot get info from package.json returns the correct HTML with values 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\" class=\\"height-full\\">
  <head>
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
    <title>probot | built with Probot</title>
    <link rel=\\"stylesheet\\" href=\\"/probot/static/primer.css\\">
  </head>
  <body class=\\"height-full bg-gray-light\\">
    <div class=\\"d-flex flex-column flex-justify-center flex-items-center text-center height-full\\">
      <img src=\\"/probot/static/robot.svg\\" alt=\\"Probot Logo\\" width=\\"100\\" class=\\"mb-6\\">
      <div class=\\"box-shadow rounded-2 border p-6 bg-white\\">
        <h1>
          Welcome to probot
            <span class=\\"Label Label--outline v-align-middle ml-2 text-gray-light\\">v0.0.0-development</span>
        </h1>

          <p>a trainable robot that responds to activity on GitHub</p>
      </div>

      <div class=\\"mt-4\\">
        <h4 class=\\"alt-h4 text-gray-light\\">Need help?</h4>
        <div class=\\"d-flex flex-justify-center mt-2\\">
          <a href=\\"https://probot.github.io/docs/\\" class=\\"btn btn-outline mr-2\\">Documentation</a>
          <a href=\\"https://probot-slackin.herokuapp.com/\\" class=\\"btn btn-outline\\">Chat on Slack</a>
        </div>
      </div>
    </div>
  </body>
</html>
"
`;

exports[`default plugin GET /probot get info from package.json returns the correct HTML without values 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\" class=\\"height-full\\">
  <head>
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
    <title>Your App | built with Probot</title>
    <link rel=\\"stylesheet\\" href=\\"/probot/static/primer.css\\">
  </head>
  <body class=\\"height-full bg-gray-light\\">
    <div class=\\"d-flex flex-column flex-justify-center flex-items-center text-center height-full\\">
      <img src=\\"/probot/static/robot.svg\\" alt=\\"Probot Logo\\" width=\\"100\\" class=\\"mb-6\\">
      <div class=\\"box-shadow rounded-2 border p-6 bg-white\\">
        <h1>
          Welcome to your Probot App
        </h1>

          <p>This bot was built using <a href=\\"https://github.com/probot/probot\\">Probot</a>, a framework for building GitHub Apps.</p>
      </div>

      <div class=\\"mt-4\\">
        <h4 class=\\"alt-h4 text-gray-light\\">Need help?</h4>
        <div class=\\"d-flex flex-justify-center mt-2\\">
          <a href=\\"https://probot.github.io/docs/\\" class=\\"btn btn-outline mr-2\\">Documentation</a>
          <a href=\\"https://probot-slackin.herokuapp.com/\\" class=\\"btn btn-outline\\">Chat on Slack</a>
        </div>
      </div>
    </div>
  </body>
</html>
"
`;
